--- a/package.json
+++ b/package.json
@@ -5,12 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "eslint": "eslint ./src/**/*.js"
+  },
+
+  "repository":{
+    "type": "git",
+     "url": "https://github.com/LeonardoMaran/EAD-proj-programador-a-bordo.git"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^6.6.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "nodemon": "^1.19.4"
   },
   "dependencies": {
