--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,32 @@
 version: "3"
 services:
-mongo:
-  image: mongo
-   restart: "älways"
-   volumes: 
+  mongo:
+    image: mongo
+    container_name: "eadapi-mongo"
+    restart: "always"
+    volumes:
       - ./.dbcache/mongo/data:/data/db
-   ports:
+    ports:
+      - "27019:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    networks:
+      - backend
+  api:
+    image: node:10.16-slim
+    container_name: "eadapi-api"
+    ports:
+      - "3000:3000"
+    working_dir: "/home/node/app"
+    volumes:
+      - ./:/home/node/app
+    command: "npm start"
+    networks:
+      - backend
+
+  
+
+networks:
+  backend:
+    driver: "bridge"
