--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
+    "dotenv-safe": "^8.1.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -25,6 +26,8 @@
   "dependencies": {
     "@hapi/hapi": "^18.4.0",
     "hapi": "^18.1.0",
-    "save": "^2.4.0"
+    "mongoose": "^5.7.7",
+    "save": "^2.4.0",
+    "uuid": "^3.3.3"
   }
 }
