--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 MONGO_USER=ead_api_user
 MONGO_PASSWORD=ead_api_user
 MONGO_HOST=mongo
-MONGO_PORT=27017
+MONGO_PORT=27019
 MONGO_DATABASE=eadapi
-PORT=3000
-HOST=0.0.0.0
+PORT=3001
+HOST=0.0.0.0i
