--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@hapi/eslint-config-hapi": "^12.3.0",
+    "@hapi/eslint-plugin-hapi": "^4.3.4",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "dotenv-safe": "^8.1.0",
@@ -25,6 +27,8 @@
   },
   "dependencies": {
     "@hapi/hapi": "^18.4.0",
+    "@hapi/rule-capitalize-modules": "^1.2.1",
+    "@std/esm": "^0.26.0",
     "hapi": "^18.1.0",
     "mongoose": "^5.7.7",
     "save": "^2.4.0",
